Update games component

--- a/games-component/games.component.html
+++ b/games-component/games.component.html
@@ -11,13 +11,7 @@
             <h4 class="module-header">Genres</h4>
             <div class="box-content box-category">
               <ul>
-                <li>Action</li>
-                <li>FPS</li>
-                <li>RPG</li>
-                <li>Horror</li>
-                <li>Platformer</li>
-                <li>Strategy</li>
-                <li>Indie</li>
+                <li>Everything</li>
               </ul>
             </div>
           </div>
@@ -46,6 +40,7 @@
                 <div class="cart">
                   <!-- TODO: fix onclick  onclick="addToCart('{{game.id}}');"  -->
                   <input type="button" value="Buy" class="button" />
+				  <input type="button" value="Preorder" class="button" />
                 </div>
               </div>
             </div>
